[fix] City handled by z-index in CSS

--- a/resources/css/city.css
+++ b/resources/css/city.css
@@ -13,7 +13,7 @@
     background:black;
     border-radius:2%;
     opacity:0.85;
-    z-index:5;
+    z-index:30;
 }
 /* Place la ville par-dessus la carte */
 #city_container {
@@ -21,7 +21,7 @@
     left:0;
     right:0;
     margin:2em 0;
-    z-index:6;
+    z-index:31;
     text-align:center;
 }
 
