--- a/resources/css/gamelayout.css
+++ b/resources/css/gamelayout.css
@@ -94,7 +94,7 @@
     left:25%;
     right:25%;
     width:50%;
-    z-index:40;
+    z-index:50;
     margin-top:-0.3em;
     padding:0 0.5em;
     background:#fbeee6;
