--- a/resources/css/popup.css
+++ b/resources/css/popup.css
@@ -16,7 +16,7 @@
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
-    z-index:50;
+    z-index:60;
 }
 .overlay:target {
     visibility: visible;
